--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.vk.sdk.VKOpenAuthActivity" />
+        <activity
+            android:windowSoftInputMode="stateVisible|adjustResize"
+            android:name="com.vk.sdk.VKOpenAuthActivity" />
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <data android:scheme="vk4890105" />
                 <action android:name="android.intent.action.VIEW" />
