--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.0'
+    compile 'com.microsoft.azure:azure-mobile-services-android-sdk:2.0.2-beta+'
     compile project(':vksdk_library')
 }
