--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,17 @@
             android:name=".LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
-
                 <action android:name="android.intent.action.VIEW" />
-
 
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>>
+            </intent-filter>
+>
         </activity>
         <activity
             android:name=".MainActivity"
@@ -50,6 +48,10 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/action_settings" >
+        </activity>
+        <activity
+            android:name=".FilterActivity"
+            android:label="@string/title_activity_filter" >
         </activity>
     </application>
 
